# ngspice

./: .gitignore  BUGS  ChangeLog  FAQ  INSTALL  MODIFICAR  Makefile.am  autogen.sh  autogen_mac.sh  bla-here.cir  configure.ac  foo-1.cir  foo.cir  inc-2a.cir  inc-3.cir  inc-x.cir  inc-y.cir  include-1.cir  lib-1.cir  lib-2.cir  model-scope-3.cir  model-scope-4.cir  model-scope-5.cir  mutual-2.cir  noise-1.cir  noise-2.cir  noise-3.cir  nupa-0.cir  nupa-1.cir  nupa-2.cir  nupa-3.cir  nupa-4.cir  nupa-5.cir  nupa-6.cir  nupa-7.cir  plot-title.cir  plot-title.gdb  tf-1.cir  tf-2.cir  tf-3.cir  (+1 more)
examples/pss/: colpitt_osc_pss.cir  compl_cross_quad_osc_pss.cir  hartley_osc_pss.cir  ring_osc_pss.cir  vackar_osc_pss.cir  vdp_osc_pss.cir
examples/snapshot/: adder_mos.cir  adder_mos_circ.cir
examples/various/: FFT_Leakage.cir  FFT_tests.cir  adder_mos.cir  modelcard.nmos  modelcard.pmos  (+1 more)
lib-2-d1/: bar.cir  foo.cir
src/: Makefile.am  Makefile.am.save  Makefile.am.save.1  main.c  ngsconvert.c  sharedspice.c  tclspice.c  winmain.c
src/spicelib/devices/cnt/: Makefile (copy).am  Makefile.am  Makefile.am~  cnt.c  cntacld.c  cntacld.c.save  cntask.c  cntconv.c  cntdefs.h  cntdel.c  cntdest.c  cntdist.c  cntdset.c  cntext.h  cntic.c  cntinit.c  cntinit.h  cntitf.h  cntload.c  cntmask.c  cntmdel.c  cntmpar.c  cntnoi.c  cntpar.c  cntpzld.c  cntsacl.c  cntset.c  cntsld.c  cntsprt.c  cntsset.c  cntsupd.c  cnttemp.c  cnttrun.c
sub/: inc-2a.cir  inc-4.cir
tests/: Makefile.am
visualc/: vngspice.vcproj  vngspice_fftw.sln  vngspice_fftw.vcproj
visualc-shared/: sharedspice.vcproj
(+289 files in other folders)
