## Process this file with automake to produce Makefile.in

noinst_LTLIBRARIES = libcnt.la

libcnt_la_SOURCES = 	\
	cnt.c		\
	cntacld.c	\
	cntask.c	\
	cntconv.c	\
	cntdefs.h	\
	cntdel.c	\
	cntdest.c	\
	cntdist.c	\
	cntdset.c	\
	cntext.h	\
	cntic.c		\
	cntinit.c	\
	cntinit.h	\
	cntitf.h	\
	cntload.c	\
	cntmask.c	\
	cntmdel.c	\
	cntmpar.c	\
	cntnoi.c	\
	cntpar.c	\
	cntpzld.c	\
	cntsacl.c	\
	cntset.c	\
	cntsld.c	\
	cntsprt.c	\
	cntsset.c	\
	cntsupd.c	\
	cnttemp.c	\
	cnttrun.c



AM_CPPFLAGS = @AM_CPPFLAGS@ -I$(top_srcdir)/src/include
AM_CFLAGS = $(STATIC)

MAINTAINERCLEANFILES = Makefile.in
